fix: [ENG-829] Fix contrast of badge when color is light error (#2526)

--- a/src/pages/common/components/Badge/Badge.less
+++ b/src/pages/common/components/Badge/Badge.less
@@ -33,7 +33,7 @@
         --text-blue: var(--main-primary-4);
         --text-light-success: var(--accessory-green-text);
         --text-light-warning: var(--accessory-brown-text);
-        --text-light-error: var(--feedback-error-0);
+        --text-light-error: var(--feedback-error-4);
 
         background-color: var(--background-grey);
     }
